testsuite/tests/grammar/invalid_lexers/case_3.lkt
import common

lexer foo_example {
    Foo <- null
    match p"foo" {
        else send(Foo, 3)
        else send(Foo, 3)
    }
}
